<?xml version="1.0"?>
<package>
  <name>test_pilz_industrial_motion</name>
  <version>0.0.0</version>
  <description>The test_pilz_industrial_motion package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="k104037r@mail.kyutech.jp">ry0</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>moveit_commander</build_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>motoman_viz</build_depend>
  <build_depend>moveit_visual_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>motoman_viz</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
</package>
